[package]
name = "frost-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
frostgate-circuits = { path = "../frostgate-circuits" }
frostgate-zkip = { path = "../frostgate-zkip" }

# Remove unused dependencies
# ethers.workspace = true
# solana-sdk = "2.2.2"
